--- a/Index.html
+++ b/Index.html
@@ -23,11 +23,17 @@
     </ul>
     <section>
         <h1>Hummel Group - Risk Advisor</h1>
-        <p>Advised clients on </p>
+        <p>Analyze client risk and create personalized plans to mitigate risk while maintaining high profit margin.
+            Design social media ads and brochures to reach new potential clients.
+            Develop ongoing networking relationships with centers of influence to increase market presence.
+            Mentor and train new Risk Advisors in sales, customer service, and relationship building to grow current and new lines of business.
+             </p>
     </section>
     <section>
         <h1>John F Kennedy University</h1>
         <p>Bachelors in Business Management</p>
+        <h1>TrueCoders</h1>
+        <p>Full stack software engineering</p>
     </section>
     <section>
 
