--- a/Index.html
+++ b/Index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Matt Schlabach</title>
 </head>
 <body>
     <section>
-        <h1>Matt Schlabach</h1>
-        <img src="/images/Me.jpg" alt="Headshot"
-            width="341px"
-            height="512px">
-        <p>
+        <div class="row">
+        <div class="column">
+        <img id="headshot" src="/images/Me.jpg" alt="Headshot"></div>
+        <div class="column">
+        <h1>I'm Matt Schlabach</h1>
+        <p class="intro">
             I am a skilled software developer, proficient in C#, HTML, CSS, SQL, and JavaScript, with experience in designing and implementing software 
             and database solutions. I have a demonstrated history of working effectively both with a team and independently.
-        </p>
+        </p></div></div>
     </section>
-    <ul>
-        <li><a href="tel:330-763-1399">330-763-1399</a></li>
-        <li><a href="mailto:schlmatthew@gmail.com">schlmatthew@gmail.com</a></li>
-    </ul>
+
     <section>
         <h1>Hummel Group - Risk Advisor</h1>
         <p>Analyze client risk and create personalized plans to mitigate risk while maintaining high profit margin.
@@ -36,7 +35,10 @@
         <p>Full stack software engineering</p>
     </section>
     <section>
-
+    <ul>
+        <li><a href="tel:330-763-1399">330-763-1399</a></li>
+        <li><a href="mailto:schlmatthew@gmail.com">schlmatthew@gmail.com</a></li>
+    </ul>
     </section>
 </body>
 </html>
